<resources>
    <string name="app_name" translatable="false">CameraControl</string>
    <string name="xposed_description">Next level camera management</string>
    <string name="title_activity_settings">CameraControl Settings</string>
    <string name="summary_introduction">Welcome to CameraControl Settings.\n
        This configuration screen will allow you to manage access to the cameras.\n
        Please mind, that the settings will only be applied on those apps,
        which this module has been activated for
        and that a restart may be necessary to apply changes. \n
        A quick and easy way to apply changes is to force close the apps in their app info.</string>
    <string name="xposed_inactive">XPosed is not available. \n
        Please ensure it\'s working and is activated for this module. \n
        If you think this is wrong, force close the app in the app settings or restart your device.</string>

    <string name="title_disableCameraManager">Disable Cameras completely</string>
    <string name="summary_disableCameraManager">Disables Cameras completely for all selected apps. \
        Those apps will not have access to any camera anymore and may fail when trying to open them.</string>
    <string name="title_category_facing">Faces</string>
    <string name="title_disableFrontFacing">Front</string>
    <string name="summary_disableFrontFacing">Disable front facing cameras</string>
    <string name="title_disableBackFacing">Back</string>
    <string name="summary_disableBackFacing">Disable back facing cameras</string>
    <string name="title_disableExternal">External</string>
    <string name="summary_disableExternal">Disable external cameras</string>
    <string name="title_category_blocking">Blocking</string>
    <string name="title_blockList">Hide Cameras</string>
    <string name="summary_blockList">Hide Cameras by removing them from the list of available cameras when the app requests one.</string>
    <string name="title_blockAccess">Block Camera Access</string>
    <string name="summary_blockAccess">Block access to a camera when the app attempts to open it.
        An app will usually not try to access cameras it does not know about, so hiding a camera should be enough.
        You can still use this for additional security, but it\'s not recommended to block access without hiding the cameras.</string>
    <string name="title_category_flash">Flash</string>
    <string name="title_blockFlash">Hide Flash</string>
    <string name="summary_blockFlash">Try to hide the existence of the flash. This does not prevent the app from using the flash and might not work at all.</string>
    <string name="title_swapSide">Swap Camera Side</string>
    <string name="summary_swapSide">Change each cameras direction from back to front and front to back.</string>
</resources>