<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="introduction"
        app:selectable="false"
        app:summary="@string/summary_introduction" />

    <SwitchPreferenceCompat
        app:defaultValue="@bool/defaultDisableCameraManager"
        app:disableDependentsState="true"
        app:key="disableCameraManager"
        app:summary="@string/summary_disableCameraManager"
        app:title="@string/title_disableCameraManager" />

    <PreferenceCategory
        app:dependency="disableCameraManager"
        app:key="category_facing"
        app:title="@string/title_category_facing">
        <CheckBoxPreference
            app:defaultValue="@bool/defaultDisableFrontFacing"
            app:key="disableFrontFacing"
            app:summary="@string/summary_disableFrontFacing"
            app:title="@string/title_disableFrontFacing" />
        <CheckBoxPreference
            app:defaultValue="@bool/defaultDisableBackFacing"
            app:key="disableBackFacing"
            app:summary="@string/summary_disableBackFacing"
            app:title="@string/title_disableBackFacing" />
        <CheckBoxPreference
            app:defaultValue="@bool/defaultDisableExternal"
            app:key="disableExternal"
            app:summary="@string/summary_disableExternal"
            app:title="@string/title_disableExternal" />
    </PreferenceCategory>

    <PreferenceCategory
        app:dependency="disableCameraManager"
        app:key="category_blocking"
        app:title="@string/title_category_blocking">
        <SwitchPreferenceCompat
            app:defaultValue="@bool/defaultHideCameras"
            app:key="blockList"
            app:summary="@string/summary_blockList"
            app:title="@string/title_blockList" />
        <SwitchPreferenceCompat
            app:defaultValue="@bool/defaultBlockAccess"
            app:key="blockAccess"
            app:summary="@string/summary_blockAccess"
            app:title="@string/title_blockAccess" />
    </PreferenceCategory>

    <SwitchPreferenceCompat
        app:dependency="disableCameraManager"
        app:key="swapSide"
        app:title="@string/title_swapSide"
        app:summary="@string/summary_swapSide"
        app:defaultValue="@bool/defaultSwapSide" />

    <PreferenceCategory
        app:key="category_flash"
        app:title="@string/title_category_flash">
        <SwitchPreferenceCompat
            app:defaultValue="@bool/defaultBlockFlash"
            app:key="blockFlash"
            app:summary="@string/summary_blockFlash"
            app:title="@string/title_blockFlash" />
    </PreferenceCategory>

</PreferenceScreen>